# rust-lang-ar.github.io

./: .gitignore  404.html  Cargo.toml  LICENSE-MIT  README.md  book.toml  bootstrap.js  eventos.html  index-d0ea0e535a521d1c.js  index-d0ea0e535a521d1c_bg.wasm  index.html  package-lock.json  package.json  postcss.config.js  presentacion.html  print.html  recursos.html  rust-toolchain.toml  rustfmt.toml  searchindex.js  searchindex.json  style.css  tailwind.config.js  webpack.config.js
.github/workflows/: CODEOWNERS  gh-pages.yml  main.yml
docs/: eventos.html  recursos.html
src/: SUMMARY.md  app.rs  eventos.md  introduccion.md  lib.rs  main.js  main.rs  presentacion.md  recursos.md  router.rs  style.scss
src/components/: about.rs  header.rs  hero.rs  joinus.rs  mod.rs  our_projects.rs  project_card.rs
src/components/events/: event.rs
src/components/index/: about.rs  hero.rs  joinus.rs  member_description.rs  mod.rs  our_members.rs  our_projects.rs  project_card.rs
src/components/layout/: footer.rs  header.rs
src/components/resources/: category.rs
src/pages/: about.rs  events.rs  index.rs  mod.rs  resources.rs
src/styles/: about.css  components.css  header.css  hero.css  joinus.css  our_projects.css  output.css  project_card.css  tailwind.css
src/styles/events/: events.css
src/styles/index/: about.css  hero.css  joinus.css  our_members.css  our_projects.css  project_card.css
src/styles/layout/: header.css
src/styles/resources/: resources.css
static/: index.html
