[package]
authors = ["Rust Argentina"]
categories = ["gui", "wasm", "web-programming"]
description = "GitHub Page for Rust Argentina"
edition = "2018"
keywords = ["yew", "wasm", "wasm-bindgen", "web"]
license = "MIT/Apache-2.0"
name = "rust-lang-ar-github-io"
readme = "README.md"
repository = "https://github.com/rust-lang-ar/rust-lang-ar.github.io"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.40"
serde = "1.0.126"
serde_json = "1.0.64"
wasm-bindgen = "^0.2"
yew = "0.17"
