[package]
authors = ["Rust Argentina"]
categories = ["gui", "wasm", "web-programming"]
description = "GitHub Page for Rust Argentina"
edition = "2018"
keywords = ["yew", "wasm", "wasm-bindgen", "web"]
license = "MIT/Apache-2.0"
name = "rust-lang-ar-github-io"
readme = "README.md"
repository = "https://github.com/rust-lang-ar/rust-lang-ar.github.io"
version = "1.0.0"

[dependencies]
anyhow = "1.0.40"
console_error_panic_hook = "0.1.6"
serde = "1.0.126"
serde_json = "1.0.64"
wasm-bindgen = "0.2.74"
wee_alloc = "0.4.5"
yew = "0.18"
yew-router = "0.15.0"