[package]
authors = ["Rust Argentina"]
categories = ["gui", "wasm", "web-programming"]
description = "GitHub Page for Rust Argentina"
edition = "2021"
keywords = ["yew", "wasm", "wasm-bindgen", "web"]
license = "MIT/Apache-2.0"
name = "rust-lang-ar-github-io"
readme = "README.md"
repository = "https://github.com/rust-lang-ar/rust-lang-ar.github.io"
version = "0.1.0"

[dependencies]
anyhow = "1.0.64"
console_error_panic_hook = "0.1.7"
serde = "1.0.144"
serde_json = "1.0.85"
wasm-bindgen = "0.2.82"
wee_alloc = "0.4.5"
yew = "0.19.3"
yew-router = "0.16.0"
